add notice to README
notify developers that new tools and usages are listed in
README-Modified

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+===============================================================
+This is the original compat-wireless README
+for more info of modification please see README-Modified
+===============================================================
 
 Linux Wireless compatibility package
 =====================================
